static/css/style.css
body {
  width: 90%;
  max-width: 1000px;
  margin: 0 auto;
  font-family: "Helvetica", "Arial", sans-serif;
  line-height: 1.5;
  color: #fff;
  background-color: #222;
}

h1,
h2,
h3 {
  margin: 1.5rem 0 0.5rem 0;
}

a {
  text-decoration: none;
  color: hsl(190, 80%, 50%);
}

a:hover {
  text-decoration: underline;
}

code,
pre {
  font-family: "Fira Mono", "Andale Mono", monospace;
  font-size: 0.9rem;
  line-height: normal;
  background-color: #333;
}

img {
  width: 100%;
}

.tree,
.results {
  list-style: none;
  padding-left: 0;
}

.tree ul {
  list-style: none;
  padding-left: 1rem;
}

header,
footer {
  margin: 1.5rem 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.logo {
  display: block;
  width: 60px;
  height: 60px;
}

.input_wrapper {
  display: flex;
  align-items: baseline;
  margin-top: -1.5rem;
}

.input {
  font-size: 2rem;
  color: #fff;
  background-color: #333;
  border: none;
  flex-grow: 1;
  margin-left: 1rem;
  padding: 0.2rem 0.5rem;
  border-radius: 4px;
  min-width: 1px;
}

.input:focus {
  outline: none;
  box-shadow: 0 0 0 3px hsl(190, 80%, 50%);
}

